2005-11-22    <dancy@DANCYSOFT>
v4.3.1
	
	* Bugfix for the configure program (where the mountd port would
	change to 5000 instead of automatic, without user intervention).
	(spr30929, spr30924)

*******************************************************************************
******** post-4.3 release ***********

2005-10-31    <layer@HOBART>

	* nfscleanreg.vbs: delete new 4.3 key, too

*******************************************************************************
******** 4.3 release ***********

2005-10-26    <dancy@DANCYSOFT>

	* nfs.nsi: [bug15756].  If running on a system with DEP, apply
	workarounds to the registry.

	* nfs.nsi: For the start menu start/stop service shortcuts, use
	net.exe instead of nfs.exe.
	
2005-10-20    <layer@HOBART>

	* nfs.nsi: make installer fail on win9x

2005-10-19    <dancy@CANDY2K>
v4.3
	
	* nfs.cl: [spr30771] with-same-export: Fixed error response.  It
	wasn't RFC compliant for NFSv3.

2005-10-18    <dancy@DANCYSOFT>
v4.2
	
	* mountd.cl (mountd): Add a handler-case around the call to
	mountd-message-handler.

2005-10-05    <dancy@DANCYSOFT>
	* dir.cl: Directory caching key is now a file handle instead of a
	path string.

	* fhandle.cl: Update fh-pathname slot of children and subchildren
	slots when renaming a filehandle. [spr30666].

	* nfs.cl: Print out some "normal" error messages (like file not
	found when doing a 'lookup') in a less alarming way.   Adjusted
	directory caching related function calls according to changes made
	in dir.cl.

2005-08-10    <dancy@DANCYSOFT>

v4.1
	
	* nfs-common.cl: Moved *nfsd-version* and *nfsd-long-version*
	variables here.  Adjusted 'bailout' macro so that the console
	window is shown.  I meant to do that when I first made the macro.
 
	* Makefile: Adjusted so that it grabs the program version from
	nfs-common.cl instead of nfs.cl

	* main.cl: Wait for mountd to finish initializing before starting
	nfsd.  Print "Allegro NFS server version ~a initializing..."